# hyperlane-solana-register

./: LICENSE.md
js/: package-lock.json  package.json  test.js
scripts/: build-programs.sh
solana/: Cargo.toml
solana-program/: Cargo.toml
solana-program/src/: lib.rs
solana/program/: Cargo.toml
solana/program-tests/: Cargo.toml
solana/program-tests/src/: lib.rs  setup.rs  tests.rs
solana/program/src/: lib.rs
sovereign/: Cargo.toml  build.rs  configs.json
sovereign/src/: lib.rs
sovereign/tests/integration/: main.rs  registration.rs  setup.rs  spec.rs
