[package]
name = "hyperlane-register"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.75"

[workspace]

[features]
no-entrypoint = []
test-client = ["dep:solana-sdk", "dep:spl-noop"]

[dependencies]
solana-sdk = { version = "=1.14.13", optional = true }
borsh = "0.9"
solana-program = "=1.14.13"
spl-noop = { version = "=0.1.3", features = ["no-entrypoint"], optional = true }
hyperlane-sealevel-mailbox = { path = "../../hyperlane-monorepo-eiger/rust/sealevel/programs/mailbox", features = [
  "no-entrypoint",
] }
hyperlane-sealevel-igp = { path = "../../hyperlane-monorepo-eiger/rust/sealevel/programs/hyperlane-sealevel-igp", features = [
  "no-entrypoint",
] }
account-utils = { path = "../../hyperlane-monorepo-eiger/rust/sealevel/libraries/account-utils" }
hyperlane-core = { path = "../../hyperlane-monorepo-eiger/rust/main/hyperlane-core" }
hyperlane-sealevel-connection-client = { path = "../../hyperlane-monorepo-eiger/rust/sealevel/libraries/hyperlane-sealevel-connection-client" }

[patch.crates-io.curve25519-dalek]
branch = "v3.2.2-relax-zeroize"
git = "https://github.com/Eclipse-Laboratories-Inc/curve25519-dalek"
version = "3.2.2"

[lib]
crate-type = ["cdylib", "lib"]
