[package]
name = "hyperlane-register-module"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.81"

[dependencies]
anyhow = { version = "1.0.95" }
borsh = { version = "1", features = ["rc"] }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
sov-hyperlane-integration = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
sov-accounts = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }

[dev-dependencies]
sov-test-utils = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
sov-bank = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "83c99036372da21999ef51065fb52d568c674fc3" }
schemars = { version = "0.8.21", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
bs58 = { version = "0.5.1", default-features = false, features = [
  "std",
  "alloc",
] }

[build-dependencies]
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
