[package]
name = "hyperlane-register-module"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.81"

[dependencies]
anyhow = { version = "1.0.95" }
borsh = { version = "1", features = ["rc"] }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
sov-hyperlane-integration = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
sov-accounts = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }

[dev-dependencies]
sov-test-utils = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
sov-bank = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk.git", rev = "c05ab77f6094872fb9cd8c2041ae47130b3149c7" }
schemars = { version = "0.8.21", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
bs58 = { version = "0.5.1", default-features = false, features = [
  "std",
  "alloc",
] }

[build-dependencies]
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
