[package]
name = "hyperlane-register-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[features]
no-entrypoint = []

[dev-dependencies]
solana-sdk.workspace = true
borsh.workspace = true
solana-program.workspace = true
solana-program-test.workspace = true
spl-noop = { workspace = true, features = ["no-entrypoint"] }

account-utils.workspace = true
hyperlane-core.workspace = true
hyperlane-sealevel-connection-client.workspace = true
hyperlane-sealevel-mailbox = { workspace = true, features = ["no-entrypoint"] }
hyperlane-sealevel-igp = { workspace = true, features = ["no-entrypoint"] }
hyperlane-test-utils = { path = "../../../hyperlane-monorepo-eiger/rust/sealevel/libraries/test-utils" }

[lib]
crate-type = ["cdylib", "lib"]
