cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-solana-sovereign-register-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[features]
no-entrypoint = []

[dev-dependencies]
# our program under test
hyperlane-solana-sovereign-register = { path = "../program", features = [
  "test-utils",
] }
borsh.workspace = true
log.workspace = true
tokio.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
solana-program-test.workspace = true
spl-noop = { workspace = true, features = ["no-entrypoint"] }

account-utils.workspace = true
hyperlane-core.workspace = true
hyperlane-sealevel-connection-client.workspace = true
hyperlane-sealevel-mailbox = { workspace = true, features = ["no-entrypoint"] }
hyperlane-sealevel-igp = { workspace = true, features = ["no-entrypoint"] }
hyperlane-test-utils = { path = "../../../hyperlane-monorepo-main/rust/sealevel/libraries/test-utils" }
hyperlane-sealevel-test-ism.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
